# aom-rs

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTEXT-HANDOFF.md  Cargo.toml  HANDOFF-SCREEN.md  HANDOFF-SPEED89.md  HANDOFF-TOGGLES.md  HANDOFF-TXSIMD.md  INTER-CHUNK1-HANDOFF.md  INTER-CHUNK2-HANDOFF.md  INTER-ENCODE-ROADMAP.md  INTER-FEATURES-PLAN.md  INTER-ROADMAP.md  INTER_DECODE_ENVELOPE.md  LICENSE-COMMERCIAL  PARITY.md  README.md  STATUS.md  justfile
crates/aom-bench/: Cargo.toml
crates/aom-bench/benches/: gate3.rs
crates/aom-bench/examples/: dump_inter_stream.rs
crates/aom-bench/src/: inter_localize.rs  lib.rs  rd_close.rs
crates/aom-bench/tests/: delta_lf_mode_e2e.rs  deltaq_mode2_e2e.rs  deltaq_mode3_e2e.rs  encoder_gate_cdef_e2e.rs  encoder_gate_superres_e2e.rs  film_grain_gate.rs  inter_e2e_search.rs  inter_harness_chunk0.rs  inter_header_derive_diff.rs  inter_pack_tile_diff.rs  lr_default_parity.rs  lr_restoration_gate.rs  rd_close_harness.rs  rd_close_intrabc.rs  rd_close_palette.rs  sb128_e2e.rs  toggles_rd_close.rs  tx_stats_prune_e2e.rs
crates/aom-decode/: Cargo.toml
crates/aom-decode/examples/: decode_animated_dbg.rs  inspect_headers.rs
crates/aom-decode/fuzz/: Cargo.toml  av1.dict  extract_seeds.py
crates/aom-decode/fuzz/fuzz_targets/: decode_frames.rs  decode_obus.rs
crates/aom-decode/fuzz/regression/: decode_frames_filmgrain_nonmonotonic_points.obu  decode_frames_inter_compound_ref.obu  decode_frames_inter_ext_tx_size_oob.obu  decode_frames_intrabc_dv_invalid.obu  decode_frames_seg_update_flags.obu  decode_frames_timing_num_ticks_uvlc_overflow.obu  decode_frames_unsupported_interp_filter.obu  decode_obus_422_invalid_chroma_subsize.obu
crates/aom-decode/src/: config.rs  error.rs  film_grain.rs  film_grain_gaussian.rs  frame.rs  lib.rs  plane.rs
crates/aom-decode/tests/: animated_avif.rs  chroma_facades_cdiff.rs  conformance_corpus.rs  disable_cdf_update_diff.rs  film_grain_diff.rs  fuzz_sweep.rs  inter_ratchet.rs  inter_real_frame.rs  inter_walking_skeleton.rs  real_bitstream.rs  superres_diff.rs  tile_roundtrip.rs  warp_census.rs
crates/aom-decode/tests/common/: mod.rs
crates/aom-dist/: Cargo.toml
crates/aom-dist/src/: avx2.rs  hadamard.rs  lib.rs  simd_variance.rs
crates/aom-dist/tests/: avx2_sad.rs  block_error_qm_diff.rs  dist_diff.rs  hadamard_diff.rs  hbd_dist_diff.rs  hbd_variance_simd_diff.rs  subtract_diff.rs  vector_var_diff.rs
crates/aom-dsp/: Cargo.toml
crates/aom-dsp/src/: lib.rs
crates/aom-dsp/src/cdef/: frame.rs  mod.rs  simd.rs
crates/aom-dsp/src/entropy/: dec.rs  default_cdfs.rs  dv_ref.rs  header.rs  partition.rs
crates/aom-dsp/src/inter/: mod.rs
crates/aom-dsp/src/intra/: cfl.rs  edge.rs  mod.rs  simd.rs  weights.rs
crates/aom-dsp/src/loopfilter/: frame.rs  highbd.rs  mod.rs  simd.rs
crates/aom-dsp/tests/: block_error_diff.rs  block_error_qm_diff.rs  build_dir_diff.rs  build_filter_intra_diff.rs  build_nd_diff.rs  build_quantizer_diff.rs  cdef_diff.rs  cdef_filter_diff.rs  cdef_filter_simd_diff.rs  cdef_frame_diff.rs  cdef_lowbd_diff.rs  cfl_cdiff.rs  cfl_vectors.rs  dc_quant_diff.rs  dir_diff.rs  dir_highbd_diff.rs  dist_diff.rs  dr_predict_high_diff.rs  dv_ref_diff.rs  edge_diff.rs  fdct_diff.rs  filter_intra_diff.rs  hadamard_diff.rs  hbd_dist_diff.rs  hbd_lpf_diff.rs  hbd_variance_simd_diff.rs  header_diff.rs  highbd_diff.rs  highbd_hadamard_diff.rs  highbd_quant_diff.rs  intra_diff.rs  intra_lowbd_diff.rs  intra_simd_diff.rs  inv_txfm1d_diff.rs  inv_txfm2d_diff.rs  lf_apply_diff.rs  lpf_diff.rs  lpf_simd_diff.rs  predict_intra_diff.rs  qm_fwd_select_diff.rs  (+18 more)
crates/aom-encode/: Cargo.toml
crates/aom-encode/src/: ab_nn_prune.rs  ab_nn_weights.rs  allintra_vis.rs  curvfit_tables.rs  denoise.rs  encode_intra.rs  encode_sb.rs  grain_table.rs  hog.rs  inter_costs.rs  inter_frame.rs  inter_me.rs  inter_rd.rs  interp_rd.rs  intra_rd.rs  intra_tx_nn_weights.rs  intra_uv_rd.rs  intrabc_search.rs  lf_search.rs  lib.rs  mode_costs.rs  noise_fft.rs  noise_fft_gen.rs  noise_model.rs  nonrd_pickmode.rs  obu_assemble.rs  pack.rs  palette_search.rs  part4_nn_weights.rs  part4_prune.rs  partition.rs  partition_pick.rs  pickcdef.rs  prune_tx_2d.rs  prune_tx_2d_nn_weights.rs  rc.rs  rd.rs  rd_pick.rs  real_costs.rs  resize.rs  (+6 more)
crates/aom-encode/tests/: avif_parity.rs  cfl_alpha_search_diff.rs  cnn_partition_cnn_diff.rs  cnn_partition_nn_diff.rs  coeff_costs_fill_diff.rs  curvfit_diff.rs  decode_diff_ab_probe.rs  decode_diff_multisb.rs  decode_diff_noise_case.rs  deltaq_perceptual_ai_diff.rs  deltaq_perceptual_wavelet_diff.rs  dist_tx_domain_diff.rs  encode_block_coeffs_diff.rs  encode_block_full_diff.rs  encode_coding_block_diff.rs  encode_intra_plane_diff.rs  encode_intra_plane_uv_diff.rs  encode_sb_diff.rs  encoder_gate_bd10_diff.rs  encoder_gate_chroma_ss_e2e.rs  encoder_gate_e2e_byte_match.rs  encoder_gate_multitile.rs  encoder_gate_tune_iq_e2e.rs  flat_block_finder_diff.rs  frame_header_matches_real_encoder.rs  full_pixel_search_diff.rs  fwht4x4_diff.rs  grain_table_diff.rs  hog_prune_diff.rs  intra_avail_partition_diff.rs  intra_mode_cost_diff.rs  intra_model_rd_diff.rs  intra_prune_diff.rs  intra_rd_pick_diff.rs  intra_sbuv_mode_loop_diff.rs  intra_sby_candidates_diff.rs  intra_sby_mode_loop_diff.rs  intra_tx_nn_diff.rs  intra_variance_factor_diff.rs  kb11_speed7_noise_localize.rs  (+50 more)
crates/aom-restore/: Cargo.toml
crates/aom-restore/src/: frame.rs  pick.rs
crates/aom-restore/tests/: pick_diff.rs  pick_search.rs
crates/aom-sys-ref/: Cargo.toml  build.rs
crates/aom-sys-ref/shim/: cdef_shim.c  convolve_shim.c  dec_shim.c  entropy_shim.c  hbd_sadvar_shim.c  highbd_intra_shim.c  hog_shim.c  intra_edge_shim.c  intra_shim.c  me_shim.c  modeinfo_shim.c  obmc_shim.c  qm_shim.c  quant_fp_shim.c  rd_shim.c  sadvar_shim.c  txb_shim.c  warp_shim.c  wb_shim.c
crates/aom-sys-ref/src/: lib.rs
crates/aom-sys-ref/tests/: dec_shim_smoke.rs  tune_shim_smoke.rs
crates/zenav1-aom/: Cargo.toml
crates/zenav1-aom/src/: lib.rs
tools/avif-extract/: Cargo.toml
tools/avif-extract/src/: main.rs
(+229 files in other folders)
