[package]
name = "zenav1-aom-bench"
version = "0.0.1"
edition = "2024"
license.workspace = true
description = "Gate-3 performance harness for aom-rs: zenbench paired benchmarks of the pure-Rust port vs the real libaom C oracle (in-process via aom-sys-ref), plus a callgrind profile driver. Bench-only crate, never published."
publish = false

[lib]
# Short lib name kept after the package rename to zenav1-aom-bench.
name = "aom_bench"

[dependencies]
# The port under measurement.
zenav1-aom-encode = { path = "../aom-encode" }
zenav1-aom-decode = { path = "../aom-decode" }
# Consolidated DSP/entropy kernels (was: aom-entropy/quant/restore/loopfilter/
# txb — folded into aom-dsp per GitHub #2). Stills-parity post-filter stages
# still ride these: the loop-restoration search (aom_dsp::restore::pick), the
# deblock APPLY feeding the LR and CDEF gates (aom_dsp::loopfilter::
# loop_filter_frame), and the LR mode-cost derivation (aom_dsp::txb::
# cost_tokens_from_cdf).
zenav1-aom-dsp = { path = "../aom-dsp" }
# The REAL C oracle (reference libaom v3.14.1, Release + SIMD). This crate is
# bench-only (publish = false), so depending on the FFI oracle here mirrors the
# dev-dependency isolation the shipping crates use: all unsafe stays inside
# aom-sys-ref, and nothing here ships.
zenav1-aom-sys-ref = { path = "../aom-sys-ref" }
# RD-closeness scoring for the stills-parity bulk-port harness (rd_close):
# perceptual quality of port-vs-C reconstructions against the source.
# Latest on lib.rs verified 2026-07-16.
zensim = "0.2.7"

[dev-dependencies]
zenbench = "0.1.9"

[[bench]]
name = "gate3"
harness = false
