[package]
name = "zenav1-aom-decode"
version = "0.0.1"
edition = "2024"
license.workspace = true
description = "Decoder composition layer for aom-rs: KEY-frame luma tile reconstruction driver (partition walk + per-leaf mode-info/coeff decode + intra predict + inverse transform), roundtrip-pinned to the byte-identical-to-C writers."

[lib]
# Short lib name kept after the package rename to zenav1-aom-decode.
name = "aom_decode"

[dependencies]
# Consolidated DSP/entropy kernels (was: aom-cdef/entropy/inter/intra/loopfilter/
# quant/recon/restore/transform/txb — folded into aom-dsp per GitHub #2).
zenav1-aom-dsp = { path = "../aom-dsp" }
# Cooperative cancellation (stop token) — zero-dep, no_std; threaded through the
# `*_with` decode entries and polled at SB-row / tile / frame boundaries.
enough = "0.4.4"

[dev-dependencies]
zenav1-aom-sys-ref = { path = "../aom-sys-ref" }
# Encoder side, used ONLY by the roundtrip test harness
# (tests/tile_roundtrip.rs: xform_quant / QuantKind / QuantParams) -- an
# encode->decode roundtrip legitimately needs the encoder. As a dev-dependency
# the decode LIBRARY no longer depends on aom-encode: the reverse-dependency
# edge is broken (reconstruct_txb now comes from aom-recon).
zenav1-aom-encode = { path = "../aom-encode" }
