[package]
name = "zenav1-aom-decode"
version = "0.0.1"
edition = "2024"
license.workspace = true
# Inherited so the optional `whereat` feature can link located errors to the repo.
repository.workspace = true
description = "Decoder composition layer for aom-rs: KEY-frame luma tile reconstruction driver (partition walk + per-leaf mode-info/coeff decode + intra predict + inverse transform), roundtrip-pinned to the byte-identical-to-C writers."

[lib]
# Short lib name kept after the package rename to zenav1-aom-decode.
name = "aom_decode"

[dependencies]
# Consolidated DSP/entropy kernels (was: aom-cdef/entropy/inter/intra/loopfilter/
# quant/recon/restore/transform/txb — folded into aom-dsp per GitHub #2).
zenav1-aom-dsp = { path = "../aom-dsp" }
# Cooperative cancellation (stop token) — zero-dep, no_std; threaded through the
# `*_with` decode entries and polled at SB-row / tile / frame boundaries.
enough = "0.4.4"
# Optional source-location tracking for decode errors (default off). When on,
# the `*_at` entries return `whereat::At<DecodeError>` linking the failure to
# this crate + commit + decode-boundary location.
whereat = { version = "0.1.5", optional = true }

[features]
# Enable `whereat::At<DecodeError>`-returning `*_at` entries (repo/commit-linked
# located errors). Off by default — the bare + `_with` entries always return the
# plain category-bearing `DecodeError`.
whereat = ["dep:whereat"]

[dev-dependencies]
zenav1-aom-sys-ref = { path = "../aom-sys-ref" }
# Encoder side, used ONLY by the roundtrip test harness
# (tests/tile_roundtrip.rs: xform_quant / QuantKind / QuantParams) -- an
# encode->decode roundtrip legitimately needs the encoder. As a dev-dependency
# the decode LIBRARY no longer depends on aom-encode: the reverse-dependency
# edge is broken (reconstruct_txb now comes from aom-recon).
zenav1-aom-encode = { path = "../aom-encode" }
