[package]
name = "aom-dist"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
archmage = "0.9.27"
magetypes = "0.9.27"
aom-dispatch = { path = "../aom-dispatch" }

[features]
default = ["avx512"]
avx512 = ["archmage/avx512", "magetypes/avx512"]

[dev-dependencies]
aom-sys-ref = { path = "../aom-sys-ref" }
