[package]
name = "zenav1-aom-dsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Consolidated DSP kernels for the aom-rs bit-exact libaom v3.14.1 port: transform, quant, txb, cdef, restore, intra, loopfilter, dist, inter, convolve, recon, dispatch, and the MSAC entropy coder — each a module under this crate."

[lib]
# Short lib name retained after the package rename to zenav1-aom-dsp, so every
# consumer keeps `use aom_dsp::...` unchanged.
name = "aom_dsp"

[dependencies]
# ONE archmage universe workspace-wide (registry, exact version) so the
# dispatch module's AOM_FORCE_SCALAR process-wide pin reaches every kernel.
archmage = "0.9.27"
magetypes = "0.9.27"

[features]
# AVX-512 tiers (X64V4Token codegen). Default-on: runtime dispatch decides, so
# the binary stays portable; disable to cut compile time on non-x86.
default = ["avx512"]
avx512 = ["archmage/avx512", "magetypes/avx512"]

[dev-dependencies]
zenav1-aom-sys-ref = { path = "../aom-sys-ref" }
