[package]
name = "aom-encode"
version = "0.0.1"
edition = "2024"
license.workspace = true
description = "Encoder composition layer for aom-rs: av1_xform_quant (forward transform + quantize + entropy context), bit-exact vs libaom."
publish = false

[dependencies]
# Consolidated DSP/entropy kernels (was: aom-transform/quant/txb/recon/entropy/
# dist/intra/convolve/loopfilter/cdef — folded into aom-dsp per GitHub #2). The
# reuse notes that lived here (subpel filter tables for aom_upsampled_pred;
# loop_filter_frame as the LF-search trial primitive; the CDEF-search kernels)
# still apply — those kernels are now aom_dsp::{convolve,loopfilter,cdef}.
aom-dsp = { path = "../aom-dsp" }

[dev-dependencies]
aom-sys-ref = { path = "../aom-sys-ref" }
# Read-only use for decode-diff diagnostics only (see
# tests/decode_diff_noise_case.rs) -- aom-decode itself is owned by the
# decoder track; this crate never modifies it. dev-dependency only, so this
# does not create a cycle in the library build graph (aom-decode's own
# [dependencies] on aom-encode only applies when building aom-decode itself;
# test binaries here are a separate compilation unit).
aom-decode = { path = "../aom-decode" }
# AVIF container muxer -- used ONLY by the `avif_parity` test (Gate 4,
# zenavif integration): wraps the port's byte-exact AV1 OBU frame into an
# AVIF still, which the harness then round-trips (parse container -> extract
# the coded AV1 -> byte-compare) and decodes (via aom-decode). Dev-dependency
# only; never linked into the aom-encode library. Pinned to the SAME git rev
# the zenavif codec crate consumes (imazen/zenavif consumes it via this exact
# rev in its [patch.crates-io]; zenavif-serialize 0.2.0 is unpublished).
zenavif-serialize = { git = "https://github.com/imazen/zenavif-serialize", rev = "4c90d4dd02ef1684fa2230c6aaa2b5ef51e6a926" }
